--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,8 @@
 
 html, body {
   height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
   font-family: var(--font-primary);
   font-size: 16px;
   font-weight: 500;
